# qruncat

./: CMakeLists.txt  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
